assets/css/site/header.css
.gh-head {
    background-color: transparent;
}

.is-head-open #gh-head {
    background-color: var(--background-color) !important;
}

.gh-head-menu,
.gh-head-actions {
    font-size: 1.2rem;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.005em;
}

.gh-head-btn {
    --multiplier: 1.3;
}

@media (max-width: 767px) {
    .is-head-open #gh-head .gh-head-actions {
        background-color: var(--background-color);
    }

    .is-head-open #gh-head .gh-social-icons {
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 20px;
        width: 100%;
    }
}

